--- a/index.html
+++ b/index.html
@@ -48,10 +48,17 @@
                         <button type="button" id="add-entry">Add Entry</button>
                     </span>
                 </div>
+                <div>
+                    <button type="submit">Calculate Remaining Calories</button>
+                    <button type="button" id="clear">Clear</button>
+                </div>
             </form>
+            <div class="output hide" id="output">
+
+            </div>
         </div>
     </main>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
